apply plugin: "java"

sourceCompatibility = 1.11
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

sourceSets.main.java.srcDirs = [ "src/" ]


eclipse.project {
    name = appName + "-craft3data"
}
//dependencies {
//	compile(name: 'idw-gpl', ext:'jar')
//	compile(name: 'blp-iio-plugin', ext:'jar')
//}
